# ImageProssecing

./: CMakeLists.txt  README.md  build.vs.2019.cmake
bin.dbg/: lab01.report.md  lab02.report.md  lab03.report.md  lab04.report.md  lab05.report.md  lab06.report.md
bin.dbg/lab05/video100.mp4/1/: ethalon.json
bin.dbg/lab05/video100.mp4/2/: ethalon.json
bin.dbg/lab05/video100.mp4/3/: ethalon.json
bin.dbg/lab05/video1000.mp4/1/: ethalon.json
bin.dbg/lab05/video1000.mp4/2/: ethalon.json
bin.dbg/lab05/video1000.mp4/3/: ethalon.json
bin.dbg/lab05/video50.mp4/1/: ethalon.json
bin.dbg/lab05/video50.mp4/2/: ethalon.json
bin.dbg/lab05/video50.mp4/3/: ethalon.json
bin.dbg/lab05/video500.mp4/1/: ethalon.json
bin.dbg/lab05/video500.mp4/2/: ethalon.json
bin.dbg/lab05/video500.mp4/3/: ethalon.json
bin.dbg/lab05/video5000.mp4/1/: ethalon.json
bin.dbg/lab05/video5000.mp4/2/: ethalon.json
bin.dbg/lab05/video5000.mp4/3/: ethalon.json
build.vs.2019/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  mashurov_v_v.sln
build.vs.2019/dependencies/json/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  nlohmann_json.pc  nlohmann_json.sln
build.vs.2019/prj.labs/lab01/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  lab01.report.md  lab01.sln  lab01.vcxproj  lab01.vcxproj.filters
build.vs.2019/prj.labs/lab02/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  lab02.report.md  lab02.sln  lab02.vcxproj  lab02.vcxproj.filters
build.vs.2019/prj.labs/lab03/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  lab03.report.md  lab03.sln  lab03.vcxproj  lab03.vcxproj.filters
build.vs.2019/prj.labs/lab04/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  lab04.report.md  lab04.sln  lab04.vcxproj  lab04.vcxproj.filters
build.vs.2019/prj.labs/lab05/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  lab05.report.md  lab05.sln  lab05.vcxproj  lab05.vcxproj.filters
build.vs.2019/prj.labs/lab06/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  lab06.report.md  lab06.sln  lab06.vcxproj  lab06.vcxproj.filters
build.vs.2019/prj.labs/taskK/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  taskK.report.md  taskK.sln  taskK.vcxproj  taskK.vcxproj.filters
prj.labs/: CMakeLists.txt
prj.labs/lab01/: lab01.cpp  lab01.report.md.in.txt
prj.labs/lab02/: lab02.cpp  lab02.report.md.in.txt
prj.labs/lab03/: lab03.cpp  lab03.report.md.in.txt
prj.labs/lab04/: CMakeLists.txt  lab04.cpp  lab04.report.md.in.txt
prj.labs/lab05/: CMakeLists.txt  lab05.cpp  lab05.report.md.in.txt
prj.labs/lab06/: CMakeLists.txt  lab06.cpp  lab06.report.md.in.txt
prj.labs/taskK/: CMakeLists.txt  taskK.cpp  taskK.report.md.in.txt
