project(lab05)
add_executable(lab05 lab05.cpp lab05.report.md.in.txt)
target_link_libraries(lab05 ${OpenCV_LIBS})
target_link_libraries(lab05 nlohmann_json::nlohmann_json)

file(READ lab05.cpp cpp_source)
# prepare report md file
configure_file(lab05.report.md.in.txt ${CMAKE_CURRENT_BINARY_DIR}/lab05.report.md @ONLY)
add_custom_command(TARGET ${PROJECT_NAME}
  POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/lab05.report.md" "$<TARGET_FILE_DIR:${PROJECT_NAME}>")

file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video50.mp4)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video100.mp4)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video500.mp4)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video1000.mp4)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video5000.mp4)

file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video50.mp4/1)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video50.mp4/2)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video50.mp4/3)

file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video100.mp4/1)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video100.mp4/2)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video100.mp4/3)

file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video500.mp4/1)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video500.mp4/2)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video500.mp4/3)

file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video1000.mp4/1)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video1000.mp4/2)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video1000.mp4/3)

file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video5000.mp4/1)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video5000.mp4/2)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lab05/video5000.mp4/3)

file(COPY ${CMAKE_CURRENT_BINARY_DIR}/lab05 DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG})
file(COPY ${CMAKE_CURRENT_BINARY_DIR}/lab05 DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE})
